--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@serverless/cli": "^1.6.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "chart.js": "4.2.1",
