--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Build and Deploy NextJS App to S3 and CloudFront
 on:
   push:
     branches:
-      - [master]
+      - master
 
 permissions:
   id-token: write
@@ -21,7 +21,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: [16.x]
+          node-version: 16
 
       - name: Install Yarn
         run: npm install -g yarn
